--- a/src/index.less
+++ b/src/index.less
@@ -1,13 +1,5 @@
 @import '~antd/dist/antd.less';
 
-:root {
-  --primary: #282f44;
-  --background: #ececec;
-  --accent: #e6af2e;
-  --accent-light: #f5d061;
-  box-sizing: border-box;
-}
-
 header {
   z-index: 100;
 }
@@ -74,3 +66,20 @@ thead > tr > th {
 .ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item {
   padding-left: 0 !important;
 }
+
+/* div * {
+  scrollbar-width: none; 
+  -ms-overflow-style: none;
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: none !important;
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar {
+    width: 3px !important;
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
+  }
+}
+ */
