add edit user functionality, refactor to form directory structure and refactor service structure

--- a/src/index.less
+++ b/src/index.less
@@ -16,28 +16,15 @@ header {
   background-color: var(--accent);
 }
 
-.secundary-btn {
-  background-color: var(--accent);
-  color: var(--primary);
-}
-
-.secundary-btn:active {
-  background-color: var(--accent);
-  color: var(--primary);
-  border: none;
-}
-
-.secundary-btn:hover,
+.secundary-btn,
 .secundary-btn:focus {
   background-color: var(--accent);
   color: var(--primary);
-  border: none;
 }
 
 .secundary-btn:hover {
-  background-color: var(--accent-light);
-  color: var(--primary);
-  border-color: var(--primary);
+  background-color: var(--primary);
+  color: var(--accent-light);
 }
 
 .form {
